# wazuh.nix

./: .gitignore  README.md  flake.nix  update-version.sh
libbpf-bootstrap/: CMakeLists.txt
modules/wazuh-agent/: default.nix  generate-agent-config.nix  generate-internal-options.nix
pkgs/: 01-makefile-patch.patch  02-libbpf-bootstrap.patch  03-bpf-helpers-fix.patch  wazuh-agent.nix
pkgs/dependencies/: external_dependencies.nix  prefetch-external-dependencies.sh  upgrade-wazuh.py  upgrade-wazuh.sh
